--- a/conf/systemd/system/picard.service
+++ b/conf/systemd/system/picard.service
@@ -2,11 +2,11 @@
 Description=picard api.py
 
 [Service]
-Type=oneshot
+Type=simple
 WorkingDirectory=/souvik.me/website/projects/picard/server/picard/api
 Environment=PICARD_PREFIX="/picard/api/"
 Environment=PICARD_PORT=8991
-ExecStart=/usr/bin/python3 /souvik.me/website/projects/picard/server/picard/api/api.py
+ExecStart=/usr/bin/python3.4 /souvik.me/website/projects/picard/server/picard/api/api.py
 
 [Install]
 WantedBy=multi-user.target
