Add nginx location for blog

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -32,24 +32,36 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-    server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
+    server 
+    {
+        listen 443 default_server;
+	listen 80;
+        listen [::]:443 default_server ipv6only=on;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+        ssl on;
+        root /souvik.me/website;
+        index index.html index.htm;
+        ssl_certificate /souvik.me/ssl/souvik_me.crt;
+        ssl_certificate_key /souvik.me/ssl/souvik_me.key;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+	location /
+	{
+		try_files $uri $uri/ $uri.html =404;
+	}
 
-        location / {
-        }
-
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
+	location /blog
+	{
+		alias /souvik.me/website/blog/blog/_site/;
+		if (-f $request_filename)
+		{
+			break;
+		}
+		if (-d $request_filename)
+		{
+			break;
+		}
+		rewrite ^/blog/((?U).*)/?$ /blog/$1.html last;
+	}
+	
     }
 }
