--- a/conf/systemd/system/picard.service
+++ b/conf/systemd/system/picard.service
@@ -4,8 +4,7 @@ Description=picard api.py
 [Service]
 Type=simple
 WorkingDirectory=/souvik.me/website/projects/picard/server/picard/api
-Environment=PICARD_PREFIX="/picard/api/"
-Environment=PICARD_PORT=8991
+Environment="PICARD_PREFIX=/picard/api/" PICARD_PORT=8991
 ExecStart=/usr/bin/python3.4 /souvik.me/website/projects/picard/server/picard/api/api.py
 
 [Install]
