--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -62,6 +62,15 @@ http {
 		}
 		rewrite ^/blog/((?U).*)/?$ /blog/$1.html last;
 	}
-	
+
+	location /picard/api
+	{
+		proxy_pass http://127.0.0.1:8991;
+	}
+
+	location /picard/static
+	{
+		alias /souvik.me/website/projects/picard/server/picard/static;
+	}
     }
 }
