Add piwik tracking code to all html files

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -44,6 +44,21 @@ http {
         ssl_certificate /souvik.me/ssl/souvik_me.crt;
         ssl_certificate_key /souvik.me/ssl/souvik_me.key;
 
+	sub_filter '</head>' '<script type="text/javascript">
+      var _paq = _paq || [];
+      _paq.push(["trackPageView"]);
+      _paq.push(["enableLinkTracking"]);
+      (function() {
+        var u="//souvik.me/piwik/";
+        _paq.push(["setTrackerUrl", u+"piwik.php"]);
+        _paq.push(["setSiteId", 1]);
+        var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0];
+        g.type="text/javascript"; g.async=true; g.defer=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <noscript><p><img src="//souvik.me/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript></head>';
+
+
 	location /
 	{
 		try_files $uri $uri/ $uri.html =404;
