--- a/conf/opendkim.conf
+++ b/conf/opendkim.conf
@@ -36,7 +36,7 @@ PidFile	/var/run/opendkim/opendkim.pid
 ##  Selects operating modes. Valid modes are s (sign) and v (verify). Default is v.
 ##  Must be changed to s (sign only) or sv (sign and verify) in order to sign outgoing
 ##  messages.
-Mode	v
+Mode	sv
 
 ##  Log activity to the system log.
 Syslog	yes
@@ -85,7 +85,7 @@ Canonicalization	relaxed/relaxed
 ##  Domain(s) whose mail should be signed by this filter. Mail from other domains will
 ##  be verified rather than being signed. Uncomment and use your domain name.
 ##  This parameter is not required if a SigningTable is in use.
-# Domain	example.com
+Domain	*
 
 ##  Defines the name of the selector to be used when signing messages.
 Selector	default
@@ -95,7 +95,7 @@ MinimumKeyBits	1024
 
 ##  Gives the location of a private key to be used for signing ALL messages. This
 ##  directive is ignored if KeyTable is enabled.
-KeyFile	/etc/opendkim/keys/default.private
+KeyFile	/souvik.me/ssl/mail.private
 
 ##  Gives the location of a file mapping key names to signing keys. In simple terms,
 ##  this tells OpenDKIM where to find your keys. If present, overrides any KeyFile
