--- a/conf/opendmarc.conf
+++ b/conf/opendmarc.conf
@@ -12,7 +12,7 @@
 ##  provided, the name of the host running the filter (as returned by the
 ##  gethostname(3) function) will be used.  
 #
-# AuthservID name
+AuthservID HOSTNAME
 
 ##  AuthservIDWithJobID { true | false }
 ##  	default "false"
