Set up dovecot with lmtp and sasl auth for postfix

--- a/conf/dovecot/conf.d/10-master.conf
+++ b/conf/dovecot/conf.d/10-master.conf
@@ -46,8 +46,10 @@ service pop3-login {
 }
 
 service lmtp {
-  unix_listener lmtp {
-    #mode = 0666
+  unix_listener /var/spool/postfix/private/dovecot-lmtp {
+    group = postfix
+    mode = 0600
+    user = postfix
   }
 
   # Create inet listener only if you can't use the above UNIX socket
@@ -93,9 +95,9 @@ service auth {
   }
 
   # Postfix smtp-auth
-  #unix_listener /var/spool/postfix/private/auth {
-  #  mode = 0666
-  #}
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0666
+  }
 
   # Auth process is run as this user.
   #user = $default_internal_user
