Add squirrelmail nginx config

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -87,5 +87,34 @@ http {
 	{
 		alias /souvik.me/website/projects/picard/server/picard/static;
 	}
+
+	location /squirrelmail
+	{
+		alias /usr/share/squirrelmail;
+		index index.php index.html index.htm;
+                location ~ /squirrelmail/src/(.*\.php)$
+		{
+			fastcgi_split_path_info ^(.+?\.php)(/.*)?$;
+			fastcgi_pass 127.0.0.1:9000;
+			fastcgi_index index.php;
+			fastcgi_param SCRIPT_FILENAME /usr/share/squirrelmail/src/$1;
+			include fastcgi_params;
+		}
+
+		location ~ /squirrelmail/index.php$
+		{
+			fastcgi_split_path_info ^(.+?\.php)(/.*)?$;
+			fastcgi_pass 127.0.0.1:9000;
+			fastcgi_index index.php;
+			fastcgi_param SCRIPT_FILENAME /usr/share/squirrelmail/index.php;
+			include fastcgi_params;
+		}
+
+		location ~ (.*\.php)$
+		{
+			return 403;
+		}
+		
+	}
     }
 }
