--- a/conf/dovecot/conf.d/10-ssl.conf
+++ b/conf/dovecot/conf.d/10-ssl.conf
@@ -11,8 +11,8 @@ ssl = required
 # dropping root privileges, so keep the key file unreadable by anyone but
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
-ssl_cert = </etc/pki/dovecot/certs/dovecot.pem
-ssl_key = </etc/pki/dovecot/private/dovecot.pem
+ssl_cert = </souvik.me/ssl/souvik_me.crt
+ssl_key = </souvik.me/ssl/souvik_me.key
 
 # If key file is password protected, give the password here. Alternatively
 # give it when starting dovecot with -p parameter. Since this file is often
