--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -32,10 +32,16 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
+    server
+    {
+        listen 80;
+        listen [::]:80 ipv6only=on;
+	server_name centos7.souvik.me;
+    	return 301 https://$server_name$request_uri;
+    }
     server 
     {
         listen 443 default_server;
-	listen 80;
         listen [::]:443 default_server ipv6only=on;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
         ssl on;
@@ -115,6 +121,26 @@ http {
 			return 403;
 		}
 		
+	}
+
+	location /piwik
+	{
+		alias /souvik.me/piwik;
+		index index.php index.html index.htm;
+		location /piwik/index.php
+		{
+                        fastcgi_pass 127.0.0.1:9000;
+                        fastcgi_index index.php;
+                        fastcgi_param SCRIPT_FILENAME /souvik.me/piwik/index.php;
+                        include fastcgi_params;
+                }
+
+		location /piwik/piwik.php
+		{
+                        fastcgi_pass 127.0.0.1:9000;
+                        fastcgi_param SCRIPT_FILENAME /souvik.me/piwik/piwik.php;
+                        include fastcgi_params;
+                }
 	}
     }
 }
