--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -142,5 +142,19 @@ http {
                         include fastcgi_params;
                 }
 	}
+
+	location /cgit-data/
+	{
+		alias /usr/share/cgit/;
+	}
+
+	location /cgit
+	{
+		fastcgi_pass unix:/run/fcgiwrap.sock;
+		fastcgi_param SCRIPT_FILENAME /var/www/cgi-bin/cgit;
+		fastcgi_split_path_info ^((?U).*)cgit(.*)$;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_param QUERY_STRING $query_string;
+	}
     }
 }
