cgit syntax highlighting

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -143,7 +143,7 @@ http {
                 }
 	}
 
-	location /cgit-data/
+	location /cgit-data
 	{
 		alias /usr/share/cgit/;
 	}
@@ -155,6 +155,7 @@ http {
 		fastcgi_split_path_info ^((?U).*)cgit(.*)$;
 		fastcgi_param PATH_INFO $fastcgi_path_info;
 		fastcgi_param QUERY_STRING $query_string;
+		include fastcgi_params;
 	}
     }
 }
