--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -41,14 +41,15 @@ http {
     }
     server 
     {
-        listen 443 default_server;
-        listen [::]:443 default_server ipv6only=on;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
-        ssl on;
-        root /souvik.me/website;
-        index index.html index.htm;
-        ssl_certificate /souvik.me/ssl/souvik_me.crt;
-        ssl_certificate_key /souvik.me/ssl/souvik_me.key;
+	listen 443 default_server;
+	listen [::]:443 default_server ipv6only=on;
+	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+	ssl on;
+	root /souvik.me/website;
+	index index.html index.htm;
+	ssl_certificate /souvik.me/ssl/souvik_me.crt;
+	ssl_certificate_key /souvik.me/ssl/souvik_me.key;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
 	sub_filter '</head>' '<script type="text/javascript">
       var _paq = _paq || [];
