--- a/conf/dovecot/conf.d/10-ssl.conf
+++ b/conf/dovecot/conf.d/10-ssl.conf
@@ -48,7 +48,7 @@ ssl_key = </souvik.me/ssl/souvik_me.key
 #ssl_dh_parameters_length = 1024
 
 # SSL protocols to use
-#ssl_protocols = !SSLv2
+ssl_protocols = !SSLv2 !SSLv3
 
 # SSL ciphers to use
 #ssl_cipher_list = ALL:!LOW:!SSLv2:!EXP:!aNULL
