Remove trailing slashes and fix blog error 500

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
 	ssl_certificate /souvik.me/ssl/souvik_me.crt;
 	ssl_certificate_key /souvik.me/ssl/souvik_me.key;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
+	rewrite ^/(.*)/$ /$1 permanent;
 	sub_filter '</head>' '<script type="text/javascript">
       var _paq = _paq || [];
       _paq.push(["trackPageView"]);
@@ -65,7 +65,6 @@ http {
     </script>
     <noscript><p><img src="//souvik.me/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript></head>';
 
-
 	location /
 	{
 		try_files $uri $uri/ $uri.html =404;
@@ -74,15 +73,13 @@ http {
 	location /blog
 	{
 		alias /souvik.me/website/blog/blog/_site/;
-		if (-f $request_filename)
-		{
-			break;
-		}
-		if (-d $request_filename)
-		{
-			break;
-		}
-		rewrite ^/blog/((?U).*)/?$ /blog/$1.html last;
+		index /blog/index.html;
+		error_page 404 = @blog_index;
+		try_files $uri $uri.html $uri/index.html =404;
+	}
+	location @blog_index
+	{
+		return 301 /blog;
 	}
 
 	location /picard/api
