Finish openvpn configuration

--- a/conf/openvpn/server.conf
+++ b/conf/openvpn/server.conf
@@ -76,9 +76,9 @@ dev tun
 # Any X509 key management system can be used.
 # OpenVPN can also use a PKCS #12 formatted key file
 # (see "pkcs12" directive in man page).
-ca /souvik.me/openvpn/ca.crt
-cert /souvik.me/openvpn/server.crt
-key /souvik.me/openvpn/server.key  # This file should be kept secret
+ca /souvik.me/ssl/openvpn/ca.crt
+cert /souvik.me/ssl/openvpn/server.crt
+key /souvik.me/ssl/openvpn/server.key  # This file should be kept secret
 
 # Diffie hellman parameters.
 # Generate your own with:
