--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -34,14 +34,14 @@ http {
 
     server
     {
-        listen 80;
-        listen [::]:80 ipv6only=on;
+        listen localhost:80;
+        listen [::1]:80 ipv6only=on;
 	server_name centos7.souvik.me;
     	return 301 https://$server_name$request_uri;
     }
     server 
     {
-	listen 4443 default_server;
+	listen 127.0.0.1:443 default_server;
 	listen [::]:443 default_server ipv6only=on;
 	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 	ssl on;
@@ -50,7 +50,6 @@ http {
 	ssl_certificate /souvik.me/ssl/souvik_me.crt;
 	ssl_certificate_key /souvik.me/ssl/souvik_me.key;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	rewrite ^/(.*)/$ /$1 permanent;
 	sub_filter '</head>' '<script type="text/javascript">
       var _paq = _paq || [];
       _paq.push(["trackPageView"]);
@@ -73,6 +72,7 @@ http {
 	location /blog
 	{
 		alias /souvik.me/website/blog/blog/_site/;
+		rewrite ^/(.*)/$ /$1 permanent;
 		index /blog/index.html;
 		error_page 404 = @blog_index;
 		try_files $uri $uri.html $uri/index.html =404;
@@ -89,7 +89,8 @@ http {
 
 	location /picard/static
 	{
-		alias /souvik.me/website/projects/picard/server/picard/static;
+		index index.html;
+		alias /souvik.me/website/projects/picard/server/picard/static/;
 	}
 
 	location /squirrelmail
