--- a/conf/openvpn/server.conf
+++ b/conf/openvpn/server.conf
@@ -29,8 +29,8 @@
 # on the same machine, use a different port
 # number for each one.  You will need to
 # open up this port on your firewall.
-port 443
-port-share 127.0.0.1 4443
+port 1194
+;port-share 127.0.0.1 4443
 
 # TCP or UDP server?
 proto tcp
