use unix socket for php-fpm

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -100,7 +100,7 @@ http {
                 location ~ /squirrelmail/src/(.*\.php)$
 		{
 			fastcgi_split_path_info ^(.+?\.php)(/.*)?$;
-			fastcgi_pass 127.0.0.1:9000;
+			fastcgi_pass unix:/run/php-fpm.sock;
 			fastcgi_index index.php;
 			fastcgi_param SCRIPT_FILENAME /usr/share/squirrelmail/src/$1;
 			include fastcgi_params;
@@ -109,7 +109,7 @@ http {
 		location ~ /squirrelmail/index.php$
 		{
 			fastcgi_split_path_info ^(.+?\.php)(/.*)?$;
-			fastcgi_pass 127.0.0.1:9000;
+			fastcgi_pass unix:/run/php-fpm.sock;
 			fastcgi_index index.php;
 			fastcgi_param SCRIPT_FILENAME /usr/share/squirrelmail/index.php;
 			include fastcgi_params;
@@ -128,7 +128,7 @@ http {
 		index index.php index.html index.htm;
 		location /piwik/index.php
 		{
-                        fastcgi_pass 127.0.0.1:9000;
+                        fastcgi_pass unix:/run/php-fpm.sock;
                         fastcgi_index index.php;
                         fastcgi_param SCRIPT_FILENAME /souvik.me/piwik/index.php;
                         include fastcgi_params;
@@ -136,7 +136,7 @@ http {
 
 		location /piwik/piwik.php
 		{
-                        fastcgi_pass 127.0.0.1:9000;
+                        fastcgi_pass unix:/run/php-fpm.sock;
                         fastcgi_param SCRIPT_FILENAME /souvik.me/piwik/piwik.php;
                         include fastcgi_params;
                 }
