Make sslh listen on both 80 and 443

--- a/conf/sslh.cfg
+++ b/conf/sslh.cfg
@@ -13,7 +13,8 @@ user: "sslh";
 # Change hostname with your external address name.
 listen:
 (
-    { host: "centos7.souvik.me"; port: "443"; }
+    { host: "centos7.souvik.me"; port: "443"; },
+    { host: "centos7.souvik.me"; port: "80";  }
 );
 
 protocols:
@@ -21,6 +22,7 @@ protocols:
      { name: "ssh"; service: "ssh"; host: "localhost"; port: "22"; probe: "builtin"; },
      { name: "openvpn"; host: "localhost"; port: "1194"; probe: "builtin"; },
      { name: "ssl"; host: "localhost"; port: "443"; probe: "builtin"; },
-     { name: "anyprot"; host: "localhost"; port: "443"; probe: "builtin"; }
+     { name: "http"; host: "localhost"; port: "80"; probe: "builtin"; },
+     { name: "anyprot"; host: "localhost"; port: "44"; probe: "builtin"; }
 );
 
