block ipv6 traffic

--- a/conf/openvpn/server.conf
+++ b/conf/openvpn/server.conf
@@ -33,7 +33,8 @@ port 1194
 ;port-share 127.0.0.1 4443
 
 # TCP or UDP server?
-proto tcp
+;proto tcp
+proto tcp6
 ;proto udp
 
 # "dev tun" will create a routed IP tunnel,
@@ -52,6 +53,7 @@ proto tcp
 # the firewall for the TUN/TAP interface.
 ;dev tap
 dev tun
+tun-ipv6
 
 # Windows needs the TAP-Win32 adapter name
 # from the Network Connections panel if you
@@ -100,6 +102,8 @@ dh /souvik.me/ssl/openvpn/dh2048.pem
 # on 10.8.0.1. Comment this line out if you are
 # ethernet bridging. See the man page for more info.
 server 10.8.0.0 255.255.255.0
+server-ipv6 2604:a880:800:a1::45:3001/64
+push "route-ipv6 2000::/3"
 
 # Maintain a record of client <-> virtual IP address
 # associations in this file.  If OpenVPN goes down or
