--- a/conf/sysctl.d/10-sysctl.conf
+++ b/conf/sysctl.d/10-sysctl.conf
@@ -1,1 +1,7 @@
 net.ipv4.ip_forward = 1
+net.ipv6.conf.all.use_tempaddr = 2
+net.ipv6.conf.default.use_tempaddr = 2
+net.ipv6.conf.eth0.use_tempaddr = 2
+net.ipv6.conf.all.forwarding = 1
+net.ipv6.conf.default.forwarding = 0
+net.ipv6.conf.eth0.forwarding = 0
