setup openvpn to use local bind9 server to avoid dns leaks

--- a/conf/named.conf
+++ b/conf/named.conf
@@ -8,13 +8,17 @@
 //
 
 options {
-	listen-on port 53 { 127.0.0.1; };
-	listen-on-v6 port 53 { ::1; };
+	listen-on port 53 { 127.0.0.1; 10.8.0.1; };
+	listen-on-v6 port 53 { ::1; 2604:a880:800:a1::45:3002; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
 	statistics-file "/var/named/data/named_stats.txt";
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
-	allow-query     { localhost; };
+	allow-query     {
+				localhost;
+				2604:a880:800:a1::45:3001/64;
+				10.8.0.0/24;
+			 };
 
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
