--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     server 
     {
 	listen 127.0.0.1:443 default_server;
-	listen [::]:443 default_server ipv6only=on;
+	listen [::1]:443 default_server ipv6only=on;
 	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 	ssl on;
 	root /souvik.me/website;
@@ -50,6 +50,11 @@ http {
 	ssl_certificate /souvik.me/ssl/souvik_me.crt;
 	ssl_certificate_key /souvik.me/ssl/souvik_me.key;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:DHE-RSA-AES128-GCM-SHA256:AES256+EDH:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+	ssl_prefer_server_ciphers on;
+	ssl_session_cache shared:SSL:10m;
+	ssl_dhparam /souvik.me/ssl/souvik_me_dhparam.pem;
+
 	sub_filter '</head>' '<script type="text/javascript">
       var _paq = _paq || [];
       _paq.push(["trackPageView"]);
@@ -157,4 +162,15 @@ http {
 		include fastcgi_params;
 	}
     }
+
+    server 
+    {
+	listen 127.0.0.1:80;
+    	listen 127.0.0.1:443;
+	listen [::1]:80;
+	listen [::1]:443;
+	server_name ~^((?!centos7.souvik.me));
+	return 410;
+    }
 }
+
