--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -45,14 +45,19 @@ http {
 	listen [::1]:443 default_server ipv6only=on;
 	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 	ssl on;
+	ssl_stapling on;
+	ssl_stapling_verify on;
 	root /souvik.me/website;
 	index index.html index.htm;
 	ssl_certificate /souvik.me/ssl/souvik_me.crt;
 	ssl_certificate_key /souvik.me/ssl/souvik_me.key;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:DHE-RSA-AES128-GCM-SHA256:AES256+EDH:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 	ssl_prefer_server_ciphers on;
-	ssl_session_cache shared:SSL:10m;
+	ssl_session_cache shared:SSL:30m;
+	ssl_session_timeout 30m;
+	ssl_buffer_size 8k;
+	ssl_trusted_certificate /souvik.me/ssl/souvik_me_root.crt;
 	ssl_dhparam /souvik.me/ssl/souvik_me_dhparam.pem;
 
 	sub_filter '</head>' '<script type="text/javascript">
