--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -36,10 +36,10 @@ http {
     {
         listen localhost:80;
         listen [::1]:80 ipv6only=on;
-	server_name centos7.souvik.me;
+	server_name souvik.me;
     	return 301 https://$server_name$request_uri;
     }
-    server 
+    server
     {
 	listen 127.0.0.1:443 default_server;
 	listen [::1]:443 default_server ipv6only=on;
@@ -129,7 +129,7 @@ http {
 		{
 			return 403;
 		}
-		
+
 	}
 
 	location /piwik
@@ -168,14 +168,13 @@ http {
 	}
     }
 
-    server 
+    server
     {
 	listen 127.0.0.1:80;
     	listen 127.0.0.1:443;
 	listen [::1]:80;
 	listen [::1]:443;
-	server_name ~^((?!centos7.souvik.me));
+	server_name ~^((?!souvik.me));
 	return 410;
     }
 }
-
