--- a/conf/sslh.cfg
+++ b/conf/sslh.cfg
@@ -13,8 +13,8 @@ user: "sslh";
 # Change hostname with your external address name.
 listen:
 (
-    { host: "centos7.souvik.me"; port: "443"; },
-    { host: "centos7.souvik.me"; port: "80";  }
+    { host: "souvik.me"; port: "443"; },
+    { host: "souvik.me"; port: "80";  }
 );
 
 protocols:
@@ -25,4 +25,3 @@ protocols:
      { name: "http"; host: "localhost"; port: "80"; probe: "builtin"; },
      { name: "anyprot"; host: "localhost"; port: "44"; probe: "builtin"; }
 );
-
