--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -60,19 +60,16 @@ http {
 	ssl_trusted_certificate /souvik.me/ssl/souvik_me_root.crt;
 	ssl_dhparam /souvik.me/ssl/souvik_me_dhparam.pem;
 
-	sub_filter '</head>' '<script type="text/javascript">
-      var _paq = _paq || [];
-      _paq.push(["trackPageView"]);
-      _paq.push(["enableLinkTracking"]);
-      (function() {
-        var u="//souvik.me/piwik/";
-        _paq.push(["setTrackerUrl", u+"piwik.php"]);
-        _paq.push(["setSiteId", 1]);
-        var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0];
-        g.type="text/javascript"; g.async=true; g.defer=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
-      })();
-    </script>
-    <noscript><p><img src="//souvik.me/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript></head>';
+	sub_filter '</head>' "<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73305012-1', 'auto');
+  ga('send', 'pageview');
+
+</script></head>";
 
 	location /
 	{
@@ -130,26 +127,6 @@ http {
 			return 403;
 		}
 
-	}
-
-	location /piwik
-	{
-		alias /souvik.me/piwik;
-		index index.php index.html index.htm;
-		location /piwik/index.php
-		{
-                        fastcgi_pass unix:/run/php-fpm.sock;
-                        fastcgi_index index.php;
-                        fastcgi_param SCRIPT_FILENAME /souvik.me/piwik/index.php;
-                        include fastcgi_params;
-                }
-
-		location /piwik/piwik.php
-		{
-                        fastcgi_pass unix:/run/php-fpm.sock;
-                        fastcgi_param SCRIPT_FILENAME /souvik.me/piwik/piwik.php;
-                        include fastcgi_params;
-                }
 	}
 
 	location /cgit-data
