--- a/var/lib/znc/.znc/configs/znc.conf
+++ b/var/lib/znc/.znc/configs/znc.conf
@@ -12,10 +12,12 @@ AnonIPLimit = 10
 ConnectDelay = 5
 HideVersion = false
 LoadModule = webadmin
-MaxBufferSize = 500
+MaxBufferSize = 5000
 ProtectWebSessions = true
 SSLCertFile = /var/lib/znc/.znc/znc.pem
 ServerThrottle = 30
+Skin = _default_
+StatusPrefix = *
 Version = 1.6.3
 
 <Listener listener0>
@@ -50,7 +52,6 @@ Version = 1.6.3
 	PrependTimestamp = true
 	QuitMsg = %znc%
 	RealName = Got ZNC?
-	StatusPrefix = *
 	TimestampFormat = [%H:%M:%S]
 
 	<Network OFTC>
