use let's encrypt

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -49,15 +49,15 @@ http {
 	ssl_stapling_verify on;
 	root /souvik.me/website;
 	index index.html index.htm;
-	ssl_certificate /souvik.me/ssl/souvik_me.crt;
-	ssl_certificate_key /souvik.me/ssl/souvik_me.key;
+	ssl_certificate /etc/letsencrypt/live/souvik.me/cert.pem;
+	ssl_certificate_key /etc/letsencrypt/live/souvik.me/privkey.pem;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 	ssl_prefer_server_ciphers on;
 	ssl_session_cache shared:SSL:30m;
 	ssl_session_timeout 30m;
 	ssl_buffer_size 8k;
-	ssl_trusted_certificate /souvik.me/ssl/souvik_me_root.crt;
+	ssl_trusted_certificate /etc/letsencrypt/live/souvik.me/fullchain.pem;
 	ssl_dhparam /souvik.me/ssl/souvik_me_dhparam.pem;
 
 	sub_filter '</head>' "<script>
