--- a/conf/dovecot/conf.d/10-ssl.conf
+++ b/conf/dovecot/conf.d/10-ssl.conf
@@ -11,8 +11,8 @@ ssl = required
 # dropping root privileges, so keep the key file unreadable by anyone but
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
-ssl_cert = </souvik.me/ssl/souvik_me.crt
-ssl_key = </souvik.me/ssl/souvik_me.key
+ssl_cert = </etc/letsencrypt/live/souvik.me/cert.pem 
+ssl_key = </etc/letsencrypt/live/souvik.me/privkey.pem
 
 # If key file is password protected, give the password here. Alternatively
 # give it when starting dovecot with -p parameter. Since this file is often
