add #elixir-lang irc channel

--- a/var/lib/znc/.znc/configs/znc.conf
+++ b/var/lib/znc/.znc/configs/znc.conf
@@ -61,6 +61,12 @@ Version = 1.6.3
 		IRCConnectEnabled = true
 		JoinDelay = 0
 		Server = irc.oftc.net +6697
+
+		<Chan ##linux>
+		</Chan>
+
+		<Chan #elixir-lang>
+		</Chan>
 	</Network>
 
 	<Network freenode>
@@ -72,6 +78,9 @@ Version = 1.6.3
 		Server = chat.freenode.net +6697
 
 		<Chan ##linux>
+		</Chan>
+
+		<Chan #elixir-lang>
 		</Chan>
 	</Network>
 
