--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -49,7 +49,7 @@ http {
 	ssl_stapling_verify on;
 	root /souvik.me/website;
 	index index.html index.htm;
-	ssl_certificate /etc/letsencrypt/live/souvik.me/cert.pem;
+	ssl_certificate /etc/letsencrypt/live/souvik.me/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/souvik.me/privkey.pem;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
